Clean Code - Cleanup TransmodelIndexGraphQLSchema warnings.